# CryptoMath

./: CMakeLists.txt  Cargo.toml  README.md  Research.ipynb  go.mod
AsimptoticAnalysis/: Difficulty.h  Efficiency.h
DataStructures/: NumericList.h
DiscreteLog/: BabyGiantStep.h
DiscreteLog/PrimesTests/: NumericFieldSieve.h
ECC/: ElipticCurveParams.h  EllipticCurve.h  EllipticCurveParams.h  test_ECC.c
ECC/CurveIndex/: Curve25519.h
ECC/SequenceAlgs/: ShufAlg.h
FastOperators/: IterativePow.h  Karatsuba.h
FastOperators/Power/: IterativePow.h  Karatsuba.h
Functions/: ChineseTheorem.h  Clousure.h  Euler.h  Lezhandr.h  Monad.h  MultiplicativeInverse.h
GeneralField/: ECCfield.h  ModularAriphmetics.h  cpp_ver.txt
GeneralField/Functions/: Euler.h  Lezhandr.h  MultiplicativeInverse.h  power.h
LargeArithmetics/Functions/: Lezhandr.h  PeriodicFractions.h
LargeArithmetics/Implemention/: impl.h
LargeArithmetics/Operations/: gcd.h
LargeArithmetics/PrimeNumeric/PrimesTests/: PhermaTest.h
LargeArithmetics/multipling/: ShtrassenAlg.h
MontgomeryLib/: CMakeCache.txt  CMakeLists.txt  Makefile  MontgomeryLibConfig.cmake  Research.ipynb  libMontgomery.so.1
MontgomeryLib/.ipynb_checkpoints/: Fuzzing-checkpoint.ipynb
MontgomeryLib/src/: REDC.c  cmake_install.cmake
MontgomeryLib/src/.ipynb_checkpoints/: Fuzzing-checkpoint.ipynb
Operators/: Clousure.h  IterativePow.h  Karatsuba.h  SquareRoot.h  bytes_num.asm  test_operator.c
PrimeNumeric/Factorisation/: Algs.h  factorization.h
PrimeNumeric/PrimesTests/: ErathospheneSieve.h  GoldvasserKilian.h  RectangularSieve.h  SpecialNumericFieldSieve.h
PrimeNumeric/SeekingAlg/: primes.h
RSA/DiscreteLog/: Iterative.h  Lambda.h
RSA/DiscreteLog/PrimesTests/: AtkinMorein.h
RandomGenerators/: Distributions.h  LFSR.h  Pool.h
ci/test/: binary_test.go
core/codec/raw/: raw.go
core/math/numeric/: binary.go  euler.go  gcd.go
core/number/api/: native.go
core/number/skel/: NativeNum.json
core/ukernel/: go.mod
core/ukernel/number/: binary.go  complex.go  (+1 more)
deployments/: docker-compose.yaml  package
doc/: diplom.md
multipling/: Karatsuba.h
notebooks/: Plotting.py
src/: TODO  big_hex.rs  lib.rs  tests.rs
src/binary/: binary.rs  mod.rs  tests.rs
src/core/: TODO
src/driver/: cuda.rs  mod.rs
src/encoding/: asn1.rs  base64.rs  converter.rs  mod.rs  x509.rs
src/field/: mod.rs
src/group/: group.rs
src/math/: Cargo.toml
src/operator/: convolution.rs  field.rs  group.rs  logical.rs  mod.rs  modular.rs  multiplicative.rs
src/operators/: arithmetical.rs  binar.rs  mod.rs  tests.rs
src/vector/: mod.rs  vector.rs
test/: native_test.go
(+114 files in other folders)
