[package]
name = "numerology"
version = "0.1.0"
authors = ["mstrielnikov <makstr@ukr.net>"]
edition = "2018"

#[lib]
#name = "binary"
#path = "src/binary/binary.rs"
#test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"